--- a/src/MarkdownWeb/MarkdownWeb.csproj
+++ b/src/MarkdownWeb/MarkdownWeb.csproj
@@ -10,7 +10,7 @@
 
   <PropertyGroup>
     <Authors>Jonas Gauffin</Authors>
-    <License>AGPL</License>
+    <License>Apache-2.0</License>
     <PackageProjectUrl>https://github.com/jgauffin/markdownweb</PackageProjectUrl>
     <Description>Wiki generator with markdown and git support (NetStandard 2+ and .NET 461+)</Description>
     <Copyright>© jgauffin 2021</Copyright>
