--- a/src/MarkdownWeb.Demo/MarkdownWeb.Demo.csproj
+++ b/src/MarkdownWeb.Demo/MarkdownWeb.Demo.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.22" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\MarkdownWeb.AspNetCore\MarkdownWeb.AspNetCore.csproj" />
     <ProjectReference Include="..\MarkdownWeb.Git\MarkdownWeb.Git.csproj" />
     <ProjectReference Include="..\MarkdownWeb\MarkdownWeb.csproj" />
