--- a/src/MarkdownWeb.Git/MarkdownWeb.Git.csproj
+++ b/src/MarkdownWeb.Git/MarkdownWeb.Git.csproj
@@ -18,8 +18,8 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <PackageReleaseNotes>Changed how corrupt directories are handled.</PackageReleaseNotes>
-    <Version>1.0.16</Version>
+    <PackageReleaseNotes>Will reset on conflicts.</PackageReleaseNotes>
+    <Version>1.0.17</Version>
   </PropertyGroup>
 
   <Target Name="PostBuild" BeforeTargets="PostBuildEvent">
