--- a/src/MarkdownWeb.Git.Tests/MarkdownWeb.Git.Tests.csproj
+++ b/src/MarkdownWeb.Git.Tests/MarkdownWeb.Git.Tests.csproj
@@ -1,32 +1,32 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-  <PropertyGroup>
-    <TargetFramework>net60</TargetFramework>
-  </PropertyGroup>
-  <ItemGroup>
-    <PackageReference Include="NSubstitute" version="4.2.2" />
-    <PackageReference Include="FluentAssertions" version="6.2.0" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.0.0" />
-    <PackageReference Include="xunit" version="2.4.1" />
-    <PackageReference Include="xunit.abstractions" version="2.0.3" />
-    <PackageReference Include="xunit.assert" version="2.4.1" />
-    <PackageReference Include="xunit.core" version="2.4.1" />
-    <PackageReference Include="xunit.extensibility.core" version="2.4.1" />
-    <PackageReference Include="xunit.extensibility.execution" version="2.4.1" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
-    </PackageReference>
-    <PackageReference Include="LibGit2Sharp" Version="0.26.2" />
-    <PackageReference Include="LibGit2Sharp.NativeBinaries" Version="2.0.306" />
+	<PropertyGroup>
+		<TargetFramework>netcoreapp3.1</TargetFramework>
+	</PropertyGroup>
+	<ItemGroup>
+		<PackageReference Include="NSubstitute" version="4.2.2" />
+		<PackageReference Include="FluentAssertions" version="6.2.0" />
+		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.0.0" />
+		<PackageReference Include="xunit" version="2.4.1" />
+		<PackageReference Include="xunit.abstractions" version="2.0.3" />
+		<PackageReference Include="xunit.assert" version="2.4.1" />
+		<PackageReference Include="xunit.core" version="2.4.1" />
+		<PackageReference Include="xunit.extensibility.core" version="2.4.1" />
+		<PackageReference Include="xunit.extensibility.execution" version="2.4.1" />
+		<PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+		</PackageReference>
+		<PackageReference Include="LibGit2Sharp" Version="0.26.2" />
+		<PackageReference Include="LibGit2Sharp.NativeBinaries" Version="2.0.306" />
 
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\MarkdownWeb\MarkdownWeb.csproj" />
-    <ProjectReference Include="..\MarkdownWeb.Git\MarkdownWeb.Git.csproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <Service Include="{82a7f48d-3b50-4b1e-b82e-3ada8210c358}" />
-  </ItemGroup>
+	</ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\MarkdownWeb\MarkdownWeb.csproj" />
+		<ProjectReference Include="..\MarkdownWeb.Git\MarkdownWeb.Git.csproj" />
+	</ItemGroup>
+	<ItemGroup>
+		<Service Include="{82a7f48d-3b50-4b1e-b82e-3ada8210c358}" />
+	</ItemGroup>
 </Project>
 
 
